--- a/printo/src/main/resources/application.properties
+++ b/printo/src/main/resources/application.properties
@@ -38,8 +38,22 @@ spring.mail.properties.mail.smtp.starttls.required=true
 # other 
 
 spring.main.banner-mode=off
-logging.level.root=warn
+logging.level.org.springdoc=DEBUG
+logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate.SQL=error
+
+
+# \u062A\u063A\u064A\u064A\u0631 \u0645\u0633\u0627\u0631 Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+
+# \u062A\u0639\u0637\u064A\u0644 \u0635\u0641\u062D\u0629 Swagger \u0627\u0644\u0631\u0626\u064A\u0633\u064A\u0629
+springdoc.swagger-ui.disable-swagger-default-url=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+# \u062A\u0643\u0648\u064A\u0646 \u0648\u0627\u062C\u0647\u0629 \u0627\u0644\u0645\u0633\u062A\u062E\u062F\u0645
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
 
 
 
