--- a/printo/src/main/resources/application.properties
+++ b/printo/src/main/resources/application.properties
@@ -38,9 +38,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 # other 
 
 spring.main.banner-mode=off
-logging.level.org.springdoc=DEBUG
-logging.level.org.springframework.web=DEBUG
-#logging.level.org.hibernate.SQL=error
+logging.level.root=WARN
+logging.level.org.hibernate.SQL=error
 
 
 # \u062A\u063A\u064A\u064A\u0631 \u0645\u0633\u0627\u0631 Swagger UI
