enhance email format

--- a/printo/pom.xml
+++ b/printo/pom.xml
@@ -96,6 +96,13 @@
             <scope>runtime</scope>
         </dependency>
 
+		<!-- Thymeleaf -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
+		
         <!-- MySQL -->
         <dependency>
             <groupId>com.mysql</groupId>
